# iiq-matcher-flattener

./: README.md  index.html  package-lock.json  package.json  rust-toolchain.toml  tailwind.config.js  tsconfig.app.json  vite.config.ts
.github/workflows/: release.yml
src/: App.tsx  Notification.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
