[package]
name = "iiq-matcher-flattener"
version = "0.1.0"
description = "Matches RGB and NIR .iiq files and flattens the directory structure"
authors = ["Taylor Denouden <taylor.denouden@hakai.org>"]
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/HakaiInstitute/iiq-matcher-flattener"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "dialog-open", "updater", "shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ix-match = "0.2.4"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
