[package]
name = "iiq-matcher-flattener"
version = "0.2.0"
description = "Matches RGB and NIR .iiq files and flattens the directory structure"
authors = ["Taylor Denouden <taylor.denouden@hakai.org>"]
edition = "2021"
license = "MIT"
readme = "../README.md"
repository = "https://github.com/HakaiInstitute/iiq-matcher-flattener"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
tauri = { version = "2.0.0-rc", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ix-match = { version = "0.3.1", default-features = false }
tauri-plugin-shell = "2.0.0-rc"
tauri-plugin-dialog = "2.0.0-rc"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2.0.0-rc"
